<resources>
    <string name="app_name">KeepGank.IO</string>
    <string name="study">KeepGank.IO</string>
    <string name="fun">开心每一天</string>

    <string name="action_blog">关于</string>
    <string name="action_settings">Settings</string>
    <string name="action_theme">主题设置</string>
    <string name="action_home">主页</string>
    <string name="action_today">今日Gank</string>
    <string name="movie">电影</string>
    <string name="girl">妹子</string>
    <string name="action_collection">Collection</string>
    <string name="action_luck">Luck</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="front_end">Front end</string>
    <string name="video">Video</string>
    <string name="resources">Resources</string>
    <string name="latest">Latest</string>
    <string name="sort">Sort</string>
    <string name="copy_the_url">Copy the url</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="collect">Collect</string>
    <string name="share">Share</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="action_about">About</string>
    <string name="save">Sava</string>
    <string name="type">Type</string>
    <string name="more">More</string>
    <string name="recommend">Recommend</string>
    <string name="search">Search</string>
    <string name="all">All</string>

    <string name="setting_theme">Select Theme</string>
    <string name="theme_auto">Auto</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="open_url">Open url</string>
    <string name="browser">Browser</string>
    <string name="web_view">WebView</string>
    <string name="about">About</string>
    <string name="contact_us">Contact us</string>
    <string name="clear_the_cache">Clear the cache</string>
    <string name="empty">Empty</string>
    <string name="no_more">No more</string>
    <string name="git_hub">GitHub</string>

    <string name="error">错误</string>
    <string name="transitions_name">image</string>

    <string name="version">Version: 1.4</string>
    <string name="about_app_summary">KeepGank.IO是一款第三方Gank.IO客户端,同时还有豆瓣电影推荐浏览功能</string>
    <string name="about_app">关于KeepGank.IO</string>
    <string name="about_me">关于作者</string>
    <string name="follow_me_on_github">在Github上关注我: Jerey-Jobs</string>
    <string name="about_me_name">Anderson大码渣(Jerey-Jobs) - 江苏,南京</string>
    <string name="about_me_rename">点击跳转作者博客</string>
    <string name="follow_me_on_github_desc">点击跳转Github</string>
    <string name="follow_me_on_jianshu">在简书上关注我: Anderson大码渣</string>
    <string name="follow_me_on_github_jianshu">点击跳转简书</string>
    <string name="suggestions">支持与改进</string>
    <string name="send_suggestion">给作者提意见</string>
    <string name="open_source_licenses">开源许可</string>
    <string name="click_go_github">点击跳转Github</string>
    <string name="github_url">在Github上关注此工程,获取工程源码</string>
    <string name="click_send_suggestion">点击发送邮件</string>
    <string name="mail_topic">KeepGank应用反馈建议</string>
    <string name="device_model">设备型号</string>
    <string name="sdk_version">SDK版本号</string>
    <string name="sendto">mailto:jerey_jobs@qq.com</string>
    <string name="app_github">https://github.com/Jerey-Jobs/KeepGank</string>
    <string name="my_blog">http://jerey.cn/</string>
    <string name="my_github">https://github.com/Jerey-Jobs</string>
    <string name="my_jianshu">http://www.jianshu.com/u/016a5ba708a0</string>
    <string name="perm_request_refused">权限申请被拒绝</string>
    <string name="click_go_first_enter">引导界面</string>
    <string name="click_go_photo_choose">头像选择界面</string>




</resources>
