<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_grey600_24dp"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_home_grey600_24dp"
            android:title="@string/action_today" />

        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_bookmark_grey600_24dp"
            android:title="@string/action_collection" />

        <item
            android:id="@+id/my_blog"
            android:icon="@drawable/ic_star_grey600_24dp"
            android:title="@string/action_blog" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/action_settings" />

    </group>

</menu>

